--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <div class="back" style="top: 300px; left: 300px;"></div>
 </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="dist/app.js"></script>
 </html>
